probleme de formation video

--- a/src/app/client/formation/formation-sage-comptabilite/categorie2/categorie2.component.html
+++ b/src/app/client/formation/formation-sage-comptabilite/categorie2/categorie2.component.html
@@ -28,58 +28,57 @@
 <div class="card card-style">
 <div class="content mt-0 mb-0">
 <div class="list-group list-custom-small list-icon-0">
-  <a href="#" data-menu="1">
-    <i class="fab fa-youtube color-highlight"></i>
-    <span>1 : INTRODUCTION</span>
-    <i class="fa fa-angle-right"></i>
-    </a>
-    <a href="#" data-menu="2">
-      <i class="fab fa-youtube color-highlight"></i>
-      <span>2 : PRESENTATION DE L'ERGONOMIE DU LOGICIEL</span>
-      <i class="fa fa-angle-right"></i>
-      </a>
-      <a href="#" data-menu="3">
-        <i class="fab fa-youtube color-highlight"></i>
-        <span>3 : OUVRIR UN FICHIER EXISTANT</span>
-        <i class="fa fa-angle-right"></i>
-        </a>
-    <a href="#" data-menu="4">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>4 : ENVIRONNEMENT ET POSSIBILITÉS DE PERSONNALISATION</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="5">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>5 : PERSONNALISER UNE BARRE D'OUTILS</span>
-            <i class="fa fa-angle-right"></i>
-            </a>
-            <a href="#" data-menu="6">
+
+            <a href="#" data-menu="11">
               <i class="fab fa-youtube color-highlight"></i>
-              <span>6 : PERSONNALISER LA BARRE VERTICAL</span>
+              <span>11 : CREATION DU FICHIER COMPTABLE A L'AIDE DE L'ASSISTANT</span>
               <i class="fa fa-angle-right"></i>
               </a>
-              <a href="#" data-menu="7">
-                <i class="fab fa-youtube color-highlight"></i>
-                <span>7 : PERSONNALISER L'INTUIT SAGE</span>
-                <i class="fa fa-angle-right"></i>
-                </a>
-     <a href="#" data-menu="8">
+    <a href="#" data-menu="12">
+      <i class="fab fa-youtube color-highlight"></i>
+      <span>12 : ENREGISTREMENT DU FICHIER</span>
+      <i class="fa fa-angle-right"></i>
+      </a>
+          <a href="#" data-menu="13">
             <i class="fab fa-youtube color-highlight"></i>
-            <span>8 : LES LISTES ET PERSONNALISATION D'AFFICHE</span>
-            <i class="fa fa-angle-right"></i>
-        </a>
-        <a href="#" data-menu="9">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>9 : LES TRIS ET RECHERCHES</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="10">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>10 : PERSONNALISATION DES LISTES</span>
+            <span>13 : LES PARAMÈTRES SOCIETE</span>
             <i class="fa fa-angle-right"></i>
             </a>
-
-
+            <a href="#" data-menu="14">
+              <i class="fab fa-youtube color-highlight"></i>
+              <span>14 : CREATION DES CONTACTS</span>
+              <i class="fa fa-angle-right"></i>
+              </a>
+              <a href="#" data-menu="15">
+                <i class="fab fa-youtube color-highlight"></i>
+                <span>15 : CREATION ET PARAMÉTRAGE DU OU DES BANQUE</span>
+                <i class="fa fa-angle-right"></i>
+                </a>
+                <a href="#" data-menu="16">
+                  <i class="fab fa-youtube color-highlight"></i>
+                  <span>16 : LES CODE JOURNAUX</span>
+                  <i class="fa fa-angle-right"></i>
+                  </a>
+                  <a href="#" data-menu="17">
+                    <i class="fab fa-youtube color-highlight"></i>
+                    <span>17 : LES TAUX DE TAXES</span>
+                    <i class="fa fa-angle-right"></i>
+                    </a>
+                    <a href="#" data-menu="18">
+                      <i class="fab fa-youtube color-highlight"></i>
+                      <span>18 : LES MODÈLES DE RÈGLEMENT</span>
+                      <i class="fa fa-angle-right"></i>
+                      </a>
+                      <a href="#" data-menu="19">
+                        <i class="fab fa-youtube color-highlight"></i>
+                        <span>19 : LE PLAN COMPTABLE CREE, MODIFIER ET SUPPRIMER UN COMPTE</span>
+                        <i class="fa fa-angle-right"></i>
+                        </a>
+                        <a href="#" data-menu="20">
+                          <i class="fab fa-youtube color-highlight"></i>
+                          <span>2O : LE PLAN TIERS CRÉER, MODIFIER ET SUPPRIMER UN COMPTE DE TIERS (1/2)</span>
+                          <i class="fa fa-angle-right"></i>
+                          </a>
 
 
 </div>
@@ -90,7 +89,7 @@
   <li class="page-item">
   <a class="page-link rounded-l color-white bg-gray2-dark shadow-xl border-0" href="#" tabindex="-1" aria-disabled="true"><i class="fa fa-angle-left"></i></a>
   </li>
-  <li class="page-item"><a class="page-link rounded-l bg-red2-dark shadow-xl border-0" href="/formation/sage-comptabilite">1</a></li>
+ <li class="page-item"><a class="page-link rounded-l bg-red2-dark shadow-xl border-0" href="/formation/sage-comptabilite">1</a></li>
   <li  class="page-item"><a class="page-link rounded-l bg-red2-dark shadow-xl border-0" href="/formation/sage-comptabilite/2">2</a></li>
   <li class="page-item"><a class="page-link rounded-l bg-red2-dark shadow-xl border-0" href="/formation/sage-comptabilite/3">3</a></li>
   <li class="page-item"><a class="page-link rounded-l bg-red2-dark shadow-xl border-0" href="/formation/sage-comptabilite/4">4</a></li>
@@ -104,7 +103,6 @@
   </li>
   </ul>
   </nav>
-
 <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
