--- a/src/app/client/formation/formation-sage-comptabilite/categorie4/categorie4.component.html
+++ b/src/app/client/formation/formation-sage-comptabilite/categorie4/categorie4.component.html
@@ -28,60 +28,56 @@
 <div class="card card-style">
 <div class="content mt-0 mb-0">
 <div class="list-group list-custom-small list-icon-0">
-  <a href="#" data-menu="1">
+  <a href="#" data-menu="31">
     <i class="fab fa-youtube color-highlight"></i>
-    <span>1 : INTRODUCTION</span>
+    <span>31 : CONTRÔLE DU PARAMÉTRAGE DES TAUX DE TAXE</span>
     <i class="fa fa-angle-right"></i>
     </a>
-    <a href="#" data-menu="2">
+    <a href="#" data-menu="32">
       <i class="fab fa-youtube color-highlight"></i>
-      <span>2 : PRESENTATION DE L'ERGONOMIE DU LOGICIEL</span>
+      <span>32 : SAISIE D'UNE NOTE DE FRAIS AVEC VENTILATION DES TAUX DE TVA</span>
       <i class="fa fa-angle-right"></i>
       </a>
-      <a href="#" data-menu="3">
+      <a href="#" data-menu="33">
         <i class="fab fa-youtube color-highlight"></i>
-        <span>3 : OUVRIR UN FICHIER EXISTANT</span>
+        <span>33 : SAISIE D'UN ACHAT INTRACOMMUNAUTAIRE ET AUTO-LIQUIDATION</span>
         <i class="fa fa-angle-right"></i>
         </a>
-    <a href="#" data-menu="4">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>4 : ENVIRONNEMENT ET POSSIBILITÉS DE PERSONNALISATION</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="5">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>5 : PERSONNALISER UNE BARRE D'OUTILS</span>
-            <i class="fa fa-angle-right"></i>
-            </a>
-            <a href="#" data-menu="6">
-              <i class="fab fa-youtube color-highlight"></i>
-              <span>6 : PERSONNALISER LA BARRE VERTICAL</span>
-              <i class="fa fa-angle-right"></i>
-              </a>
-              <a href="#" data-menu="7">
-                <i class="fab fa-youtube color-highlight"></i>
-                <span>7 : PERSONNALISER L'INTUIT SAGE</span>
-                <i class="fa fa-angle-right"></i>
-                </a>
-     <a href="#" data-menu="8">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>8 : LES LISTES ET PERSONNALISATION D'AFFICHE</span>
-            <i class="fa fa-angle-right"></i>
-        </a>
-        <a href="#" data-menu="9">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>9 : LES TRIS ET RECHERCHES</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="10">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>10 : PERSONNALISATION DES LISTES</span>
-            <i class="fa fa-angle-right"></i>
-            </a>
-
-
-
-
+<a href="#" data-menu="34">
+    <i class="fab fa-youtube color-highlight"></i>
+    <span>34 : CONTRÔLE DU PARAMÉTRAGE DE LA TVZ INTRACOMMUNAUTAIRE</span>
+    <i class="fa fa-angle-right"></i>
+</a>
+<a href="#" data-menu="35">
+  <i class="fab fa-youtube color-highlight"></i>
+  <span>35 : LES JOURNAUX DE SAISIE</span>
+  <i class="fa fa-angle-right"></i>
+  </a>
+  <a href="#" data-menu="36">
+    <i class="fab fa-youtube color-highlight"></i>
+    <span>36 : CREATION D'UN MODÈLE DE SAISIE</span>
+    <i class="fa fa-angle-right"></i>
+    </a>
+    <a href="#" data-menu="37">
+      <i class="fab fa-youtube color-highlight"></i>
+      <span>37 : UTILISATION D'UN MODÈLE DES SAISIES</span>
+      <i class="fa fa-angle-right"></i>
+      </a>
+<a href="#" data-menu="38">
+<i class="fab fa-youtube color-highlight"></i>
+<span>38 : AUTOMATISER LES CALCULS D'UN MODÈLE DE SAISIE</span>
+<i class="fa fa-angle-right"></i>
+</a>
+  <a href="#" data-menu="39">
+    <i class="fab fa-youtube color-highlight"></i>
+    <span>39 : CREATION D'UN MODÈLE D'ABONNEMENT</span>
+    <i class="fa fa-angle-right"></i>
+    </a>
+    <a href="#" data-menu="40">
+      <i class="fab fa-youtube color-highlight"></i>
+      <span>40 : GÉNÉRER LES ÉCRITURES D'ABONNEMENT</span>
+      <i class="fa fa-angle-right"></i>
+      </a>
 </div>
 </div>
 </div>
@@ -104,7 +100,6 @@
   </li>
   </ul>
   </nav>
-
 <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
