--- a/src/app/client/formation/formation-sage-comptabilite/categorie5/categorie5.component.html
+++ b/src/app/client/formation/formation-sage-comptabilite/categorie5/categorie5.component.html
@@ -28,60 +28,56 @@
 <div class="card card-style">
 <div class="content mt-0 mb-0">
 <div class="list-group list-custom-small list-icon-0">
-  <a href="#" data-menu="1">
+  <a href="#" data-menu="41">
     <i class="fab fa-youtube color-highlight"></i>
-    <span>1 : INTRODUCTION</span>
+    <span>41 : LA RECHERCHE D'ÉCRITURES</span>
     <i class="fa fa-angle-right"></i>
     </a>
-    <a href="#" data-menu="2">
+    <a href="#" data-menu="42">
       <i class="fab fa-youtube color-highlight"></i>
-      <span>2 : PRESENTATION DE L'ERGONOMIE DU LOGICIEL</span>
+      <span>42 : LA RÉIMPUTATION DES COMPTES</span>
       <i class="fa fa-angle-right"></i>
       </a>
-      <a href="#" data-menu="3">
+      <a href="#" data-menu="43">
         <i class="fab fa-youtube color-highlight"></i>
-        <span>3 : OUVRIR UN FICHIER EXISTANT</span>
+        <span>43 : SAISIE DES RÈGLEMENTS DES FOURNISSEURS</span>
         <i class="fa fa-angle-right"></i>
         </a>
-    <a href="#" data-menu="4">
+        <a href="#" data-menu="44">
           <i class="fab fa-youtube color-highlight"></i>
-          <span>4 : ENVIRONNEMENT ET POSSIBILITÉS DE PERSONNALISATION</span>
+          <span>44 : SAISIE DES RÈGLEMENTS DES CLIENTS</span>
           <i class="fa fa-angle-right"></i>
           </a>
-          <a href="#" data-menu="5">
+          <a href="#" data-menu="45">
             <i class="fab fa-youtube color-highlight"></i>
-            <span>5 : PERSONNALISER UNE BARRE D'OUTILS</span>
+            <span>45 : SAISIE DU LIVRE DE CAISSE</span>
             <i class="fa fa-angle-right"></i>
             </a>
-            <a href="#" data-menu="6">
+            <a href="#" data-menu="46">
               <i class="fab fa-youtube color-highlight"></i>
-              <span>6 : PERSONNALISER LA BARRE VERTICAL</span>
+              <span>46 : CONTRÔLER LES RÈGLEMENTS</span>
               <i class="fa fa-angle-right"></i>
               </a>
-              <a href="#" data-menu="7">
+              <a href="#" data-menu="47">
                 <i class="fab fa-youtube color-highlight"></i>
-                <span>7 : PERSONNALISER L'INTUIT SAGE</span>
+                <span>47 : RAPPROCHEMENT BANCAIRE MANUEL</span>
                 <i class="fa fa-angle-right"></i>
                 </a>
-     <a href="#" data-menu="8">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>8 : LES LISTES ET PERSONNALISATION D'AFFICHE</span>
-            <i class="fa fa-angle-right"></i>
-        </a>
-        <a href="#" data-menu="9">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>9 : LES TRIS ET RECHERCHES</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="10">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>10 : PERSONNALISATION DES LISTES</span>
-            <i class="fa fa-angle-right"></i>
-            </a>
-
-
-
-
+                <a href="#" data-menu="48">
+                  <i class="fab fa-youtube color-highlight"></i>
+                  <span>48 : SAISIR LES ÉCRITURES DE RÉGULARISATION ET CONTRÔLER LA SAISIE</span>
+                  <i class="fa fa-angle-right"></i>
+                  </a>
+                  <a href="#" data-menu="49">
+                    <i class="fab fa-youtube color-highlight"></i>
+                    <span>49 : ÉDITER ET CONSULTER LES RAPPROCHEMENTS BANCAIRES</span>
+                    <i class="fa fa-angle-right"></i>
+                    </a>
+                    <a href="#" data-menu="50">
+                      <i class="fab fa-youtube color-highlight"></i>
+                      <span>50 : IMPORTER UN RELEVÉ BANCAIRE OU SAISIR LA BANQUE</span>
+                      <i class="fa fa-angle-right"></i>
+                      </a>
 </div>
 </div>
 </div>
@@ -104,7 +100,6 @@
   </li>
   </ul>
   </nav>
-
 <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
