--- a/src/app/client/formation/formation-sage-comptabilite/categorie6/categorie6.component.html
+++ b/src/app/client/formation/formation-sage-comptabilite/categorie6/categorie6.component.html
@@ -28,60 +28,57 @@
 <div class="card card-style">
 <div class="content mt-0 mb-0">
 <div class="list-group list-custom-small list-icon-0">
-  <a href="#" data-menu="1">
+
+  <a href="#" data-menu="51">
     <i class="fab fa-youtube color-highlight"></i>
-    <span>1 : INTRODUCTION</span>
+    <span>51 : RAPPROCHEMENT BANCAIRE AUTOMATIQUE</span>
     <i class="fa fa-angle-right"></i>
     </a>
-    <a href="#" data-menu="2">
+    <a href="#" data-menu="52">
       <i class="fab fa-youtube color-highlight"></i>
-      <span>2 : PRESENTATION DE L'ERGONOMIE DU LOGICIEL</span>
+      <span>52 : ÉDITER LE JUSTIFICATIF DE RAPPROCHEMENT</span>
       <i class="fa fa-angle-right"></i>
       </a>
-      <a href="#" data-menu="3">
+      <a href="#" data-menu="53">
         <i class="fab fa-youtube color-highlight"></i>
-        <span>3 : OUVRIR UN FICHIER EXISTANT</span>
+        <span>53 : GÉNÉRER LES ÉCRITURES DE RÉGULARISATION</span>
         <i class="fa fa-angle-right"></i>
         </a>
-    <a href="#" data-menu="4">
+        <a href="#" data-menu="54">
           <i class="fab fa-youtube color-highlight"></i>
-          <span>4 : ENVIRONNEMENT ET POSSIBILITÉS DE PERSONNALISATION</span>
+          <span>54 : LA GESTION DES COMPTES GÉNÉRAUX</span>
           <i class="fa fa-angle-right"></i>
           </a>
-          <a href="#" data-menu="5">
+          <a href="#" data-menu="55">
             <i class="fab fa-youtube color-highlight"></i>
-            <span>5 : PERSONNALISER UNE BARRE D'OUTILS</span>
+            <span>55 : LA GESTION DES COMPTES DE TIERS</span>
             <i class="fa fa-angle-right"></i>
             </a>
-            <a href="#" data-menu="6">
+        <a href="#" data-menu="56">
               <i class="fab fa-youtube color-highlight"></i>
-              <span>6 : PERSONNALISER LA BARRE VERTICAL</span>
+              <span>56 : LETTRAGE MANUEL, PRE LETTRAGE ET POINTAGE DES COMPTES TIERS</span>
               <i class="fa fa-angle-right"></i>
               </a>
-              <a href="#" data-menu="7">
+              <a href="#" data-menu="57">
                 <i class="fab fa-youtube color-highlight"></i>
-                <span>7 : PERSONNALISER L'INTUIT SAGE</span>
+                <span>57 : LETTRAGE AUTOMATIQUE DES COMPTES DE TIERS</span>
                 <i class="fa fa-angle-right"></i>
                 </a>
-     <a href="#" data-menu="8">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>8 : LES LISTES ET PERSONNALISATION D'AFFICHE</span>
-            <i class="fa fa-angle-right"></i>
-        </a>
-        <a href="#" data-menu="9">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>9 : LES TRIS ET RECHERCHES</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="10">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>10 : PERSONNALISATION DES LISTES</span>
-            <i class="fa fa-angle-right"></i>
+                <a href="#" data-menu="58">
+                  <i class="fab fa-youtube color-highlight"></i>
+                  <span>58 : DELETTRAGE DES COMPTES</span>
+                  <i class="fa fa-angle-right"></i>
+                  </a>
+                  <a href="#" data-menu="59">
+                    <i class="fab fa-youtube color-highlight"></i>
+                    <span>59 : LES RELANCES CLIENTS</span>
+                    <i class="fa fa-angle-right"></i>
+                    </a>
+         <a href="#" data-menu="60">
+                <i class="fab fa-youtube color-highlight"></i>
+                <span>60 : CRÉER UN MODÈLE DE LETTRE DE RELANCE</span>
+                <i class="fa fa-angle-right"></i>
             </a>
-
-
-
-
 </div>
 </div>
 </div>
@@ -104,7 +101,6 @@
   </li>
   </ul>
   </nav>
-
 <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
