--- a/src/app/client/formation/formation-sage-comptabilite/categorie7/categorie7.component.html
+++ b/src/app/client/formation/formation-sage-comptabilite/categorie7/categorie7.component.html
@@ -28,60 +28,83 @@
 <div class="card card-style">
 <div class="content mt-0 mb-0">
 <div class="list-group list-custom-small list-icon-0">
-  <a href="#" data-menu="1">
+
+
+  <a href="#" data-menu="61">
     <i class="fab fa-youtube color-highlight"></i>
-    <span>1 : INTRODUCTION</span>
+    <span>61 : LIER UN MODÈLE A UN CLIENT ET IMPRIMER LA LETTRE DE RELANCE</span>
     <i class="fa fa-angle-right"></i>
     </a>
-    <a href="#" data-menu="2">
+    <a href="#" data-menu="62">
       <i class="fab fa-youtube color-highlight"></i>
-      <span>2 : PRESENTATION DE L'ERGONOMIE DU LOGICIEL</span>
+      <span>62 : PARAMÉTRER LA DECLARATION DE TAXES</span>
       <i class="fa fa-angle-right"></i>
       </a>
-      <a href="#" data-menu="3">
+      <a href="#" data-menu="63">
         <i class="fab fa-youtube color-highlight"></i>
-        <span>3 : OUVRIR UN FICHIER EXISTANT</span>
+        <span>63 : IMPRIMER LES COMPTES DE TAXE ET L'ÉTAT PRÉPARATOIRE</span>
         <i class="fa fa-angle-right"></i>
         </a>
-    <a href="#" data-menu="4">
+<a href="#" data-menu="64">
+<i class="fab fa-youtube color-highlight"></i>
+<span>64 : ÉTABLIR LA DECLARATION DE TAXE</span>
+<i class="fa fa-angle-right"></i>
+</a>
+    <a href="#" data-menu="65">
+      <i class="fab fa-youtube color-highlight"></i>
+      <span>65 : GÉNÉRER L'ÉCRITURE DE CENTRALISATION</span>
+      <i class="fa fa-angle-right"></i>
+      </a>
+      <a href="#" data-menu="66">
+        <i class="fab fa-youtube color-highlight"></i>
+        <span>66 : IMPRESSION DE LA BALANCE</span>
+        <i class="fa fa-angle-right"></i>
+        </a>
+        <a href="#" data-menu="67">
           <i class="fab fa-youtube color-highlight"></i>
-          <span>4 : ENVIRONNEMENT ET POSSIBILITÉS DE PERSONNALISATION</span>
+          <span>67 : IMPRESSION DU BROUILLARD DE SAISIE</span>
           <i class="fa fa-angle-right"></i>
           </a>
-          <a href="#" data-menu="5">
+          <a href="#" data-menu="68">
             <i class="fab fa-youtube color-highlight"></i>
-            <span>5 : PERSONNALISER UNE BARRE D'OUTILS</span>
+            <span>68 : IMPRESSION DU JOURNAL</span>
             <i class="fa fa-angle-right"></i>
             </a>
-            <a href="#" data-menu="6">
+            <a href="#" data-menu="69">
               <i class="fab fa-youtube color-highlight"></i>
-              <span>6 : PERSONNALISER LA BARRE VERTICAL</span>
+              <span>69 : IMPRESSION DU GRAND LIVRE</span>
               <i class="fa fa-angle-right"></i>
               </a>
-              <a href="#" data-menu="7">
+              <a href="#" data-menu="70">
                 <i class="fab fa-youtube color-highlight"></i>
-                <span>7 : PERSONNALISER L'INTUIT SAGE</span>
+                <span>70 : IMPRESSION DE LA BALANCE AGEE</span>
                 <i class="fa fa-angle-right"></i>
                 </a>
-     <a href="#" data-menu="8">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>8 : LES LISTES ET PERSONNALISATION D'AFFICHE</span>
-            <i class="fa fa-angle-right"></i>
-        </a>
-        <a href="#" data-menu="9">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>9 : LES TRIS ET RECHERCHES</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="10">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>10 : PERSONNALISATION DES LISTES</span>
-            <i class="fa fa-angle-right"></i>
-            </a>
-
-
-
-
+                <a href="#" data-menu="71">
+                  <i class="fab fa-youtube color-highlight"></i>
+                  <span>71 : IMPRESSION DES ÉTATS TIERS</span>
+                  <i class="fa fa-angle-right"></i>
+                  </a>
+                  <a href="#" data-menu="72">
+                    <i class="fab fa-youtube color-highlight"></i>
+                    <span>72 : IMPRESSION DES STATISTIQUE</span>
+                    <i class="fa fa-angle-right"></i>
+                    </a>
+                    <a href="#" data-menu="73">
+                      <i class="fab fa-youtube color-highlight"></i>
+                      <span>73 : IMPRESSION DE L'ÉCHÉANCIER</span>
+                      <i class="fa fa-angle-right"></i>
+                      </a>
+                      <a href="#" data-menu="74">
+                        <i class="fab fa-youtube color-highlight"></i>
+                        <span>74 : CREATION D'UN PLAN ANALYTIQUE</span>
+                        <i class="fa fa-angle-right"></i>
+                        </a>
+                        <a href="#" data-menu="75">
+                          <i class="fab fa-youtube color-highlight"></i>
+                          <span>75 : CREATION D'UNE SECTION ANALYTIQUE</span>
+                          <i class="fa fa-angle-right"></i>
+                          </a>
 </div>
 </div>
 </div>
@@ -104,7 +127,6 @@
   </li>
   </ul>
   </nav>
-
 <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
