--- a/src/app/client/formation/formation-sage-comptabilite/categorie8/categorie8.component.html
+++ b/src/app/client/formation/formation-sage-comptabilite/categorie8/categorie8.component.html
@@ -28,59 +28,78 @@
 <div class="card card-style">
 <div class="content mt-0 mb-0">
 <div class="list-group list-custom-small list-icon-0">
-  <a href="#" data-menu="1">
+
+
+  <a href="#" data-menu="76">
     <i class="fab fa-youtube color-highlight"></i>
-    <span>1 : INTRODUCTION</span>
+    <span>76 : LES CODES JOURNAUX ANALYTIQUE</span>
     <i class="fa fa-angle-right"></i>
     </a>
-    <a href="#" data-menu="2">
+    <a href="#" data-menu="77">
       <i class="fab fa-youtube color-highlight"></i>
-      <span>2 : PRESENTATION DE L'ERGONOMIE DU LOGICIEL</span>
+      <span>77 : RATTACHER UN COMPTE AU PLAN ANALYTIQUE</span>
       <i class="fa fa-angle-right"></i>
       </a>
-      <a href="#" data-menu="3">
+      <a href="#" data-menu="78">
         <i class="fab fa-youtube color-highlight"></i>
-        <span>3 : OUVRIR UN FICHIER EXISTANT</span>
+        <span>78 : SAISIR UNE ÉCRITURE AVEC VENTILATION ANALYTIQUE</span>
         <i class="fa fa-angle-right"></i>
         </a>
-    <a href="#" data-menu="4">
+        <a href="#" data-menu="79">
           <i class="fab fa-youtube color-highlight"></i>
-          <span>4 : ENVIRONNEMENT ET POSSIBILITÉS DE PERSONNALISATION</span>
+          <span>79 : CRÉER UN MODÈLE DE GRILLE</span>
           <i class="fa fa-angle-right"></i>
           </a>
-          <a href="#" data-menu="5">
+          <a href="#" data-menu="80">
             <i class="fab fa-youtube color-highlight"></i>
-            <span>5 : PERSONNALISER UNE BARRE D'OUTILS</span>
+            <span>80 : IMPRIMER LES ÉTATS ANALYTIQUE</span>
             <i class="fa fa-angle-right"></i>
             </a>
-            <a href="#" data-menu="6">
+            <a href="#" data-menu="81">
               <i class="fab fa-youtube color-highlight"></i>
-              <span>6 : PERSONNALISER LA BARRE VERTICAL</span>
+              <span>81 : CREATION D'UN POSTE BUDGÉTAIRE</span>
               <i class="fa fa-angle-right"></i>
               </a>
-              <a href="#" data-menu="7">
+          <a href="#" data-menu="82">
                 <i class="fab fa-youtube color-highlight"></i>
-                <span>7 : PERSONNALISER L'INTUIT SAGE</span>
+                <span>82 : IMPRESSION DES ÉTATS BUDGÉTAIRES</span>
                 <i class="fa fa-angle-right"></i>
                 </a>
-     <a href="#" data-menu="8">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>8 : LES LISTES ET PERSONNALISATION D'AFFICHE</span>
-            <i class="fa fa-angle-right"></i>
-        </a>
-        <a href="#" data-menu="9">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>9 : LES TRIS ET RECHERCHES</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="10">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>10 : PERSONNALISATION DES LISTES</span>
-            <i class="fa fa-angle-right"></i>
-            </a>
-
-
-
+                <a href="#" data-menu="83">
+                  <i class="fab fa-youtube color-highlight"></i>
+                  <span>83 : EMPLACEMENT DES FICHIERS COMPTABLE</span>
+                  <i class="fa fa-angle-right"></i>
+                  </a>
+                  <a href="#" data-menu="84">
+                    <i class="fab fa-youtube color-highlight"></i>
+                    <span>84 : SAUVEGARDER LE FICHIER</span>
+                    <i class="fa fa-angle-right"></i>
+                    </a>
+                    <a href="#" data-menu="85">
+                      <i class="fab fa-youtube color-highlight"></i>
+                      <span>85 : MAINTENANCE</span>
+                      <i class="fa fa-angle-right"></i>
+                      </a>
+           <a href="#" data-menu="86">
+                  <i class="fab fa-youtube color-highlight"></i>
+                  <span>86 : IMPRESSION DES ÉTATS DE FIN D'EXERCICE</span>
+                  <i class="fa fa-angle-right"></i>
+              </a>
+              <a href="#" data-menu="87">
+                <i class="fab fa-youtube color-highlight"></i>
+                <span>87 : CREATION D'UN NOUVEL EXERCICE ET GENERATION DES REPORTS</span>
+                <i class="fa fa-angle-right"></i>
+                </a>
+                <a href="#" data-menu="88">
+                  <i class="fab fa-youtube color-highlight"></i>
+                  <span>88 : CLOTURE DES JOURNAUX</span>
+                  <i class="fa fa-angle-right"></i>
+                  </a>
+                  <a href="#" data-menu="89">
+                    <i class="fab fa-youtube color-highlight"></i>
+                    <span>89 : CLOTURE DE L'EXERCICE</span>
+                    <i class="fa fa-angle-right"></i>
+                    </a>
 
 </div>
 </div>
@@ -104,7 +123,6 @@
   </li>
   </ul>
   </nav>
-
 <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
