--- a/src/app/client/formation/formation-sage-comptabilite/categorie3/categorie3.component.html
+++ b/src/app/client/formation/formation-sage-comptabilite/categorie3/categorie3.component.html
@@ -28,58 +28,56 @@
 <div class="card card-style">
 <div class="content mt-0 mb-0">
 <div class="list-group list-custom-small list-icon-0">
-  <a href="#" data-menu="1">
+  <a href="#" data-menu="21">
     <i class="fab fa-youtube color-highlight"></i>
-    <span>1 : INTRODUCTION</span>
+    <span>21 : LE PLAN TIERS CRÉER, MODIFIER ET SUPPRIMER UN COMPTE DE TIERS (2/2)</span>
     <i class="fa fa-angle-right"></i>
     </a>
-    <a href="#" data-menu="2">
+    <a href="#" data-menu="22">
       <i class="fab fa-youtube color-highlight"></i>
-      <span>2 : PRESENTATION DE L'ERGONOMIE DU LOGICIEL</span>
+      <span>22 : LES COLLABORATEURS CRÉER, MODIFIER ET SUPPRIMER UNE FICHE COLLABORATEURS</span>
       <i class="fa fa-angle-right"></i>
       </a>
-      <a href="#" data-menu="3">
+      <a href="#" data-menu="23">
         <i class="fab fa-youtube color-highlight"></i>
-        <span>3 : OUVRIR UN FICHIER EXISTANT</span>
+        <span>23 : LES UTILISATEURS ET NIVEAUX D'AUTORISATION</span>
         <i class="fa fa-angle-right"></i>
         </a>
-    <a href="#" data-menu="4">
+        <a href="#" data-menu="24">
           <i class="fab fa-youtube color-highlight"></i>
-          <span>4 : ENVIRONNEMENT ET POSSIBILITÉS DE PERSONNALISATION</span>
+          <span>24 : LES DIFFÉRENTS TYPES DE SAISIES ET LEURS CARACTÉRISTIQUES</span>
           <i class="fa fa-angle-right"></i>
           </a>
-          <a href="#" data-menu="5">
+          <a href="#" data-menu="25">
             <i class="fab fa-youtube color-highlight"></i>
-            <span>5 : PERSONNALISER UNE BARRE D'OUTILS</span>
+            <span>25 : SAISIE DES A NOUVEAUX</span>
             <i class="fa fa-angle-right"></i>
             </a>
-            <a href="#" data-menu="6">
+            <a href="#" data-menu="26">
               <i class="fab fa-youtube color-highlight"></i>
-              <span>6 : PERSONNALISER LA BARRE VERTICAL</span>
+              <span>26 : SAISIE DES VENTES PAR SAISIE DES ÉCRITURES</span>
               <i class="fa fa-angle-right"></i>
               </a>
-              <a href="#" data-menu="7">
+              <a href="#" data-menu="27">
                 <i class="fab fa-youtube color-highlight"></i>
-                <span>7 : PERSONNALISER L'INTUIT SAGE</span>
+                <span>27 : COURS DE SAISIE</span>
                 <i class="fa fa-angle-right"></i>
                 </a>
-     <a href="#" data-menu="8">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>8 : LES LISTES ET PERSONNALISATION D'AFFICHE</span>
-            <i class="fa fa-angle-right"></i>
-        </a>
-        <a href="#" data-menu="9">
-          <i class="fab fa-youtube color-highlight"></i>
-          <span>9 : LES TRIS ET RECHERCHES</span>
-          <i class="fa fa-angle-right"></i>
-          </a>
-          <a href="#" data-menu="10">
-            <i class="fab fa-youtube color-highlight"></i>
-            <span>10 : PERSONNALISATION DES LISTES</span>
-            <i class="fa fa-angle-right"></i>
-            </a>
-
-
+                <a href="#" data-menu="28">
+                  <i class="fab fa-youtube color-highlight"></i>
+                  <span>28 : ENREGISTRER UNE FACTURE DE VENTE AVEC MODE DE RÈGLEMENT</span>
+                  <i class="fa fa-angle-right"></i>
+                  </a>
+                  <a href="#" data-menu="29">
+                    <i class="fab fa-youtube color-highlight"></i>
+                    <span>29 : ENREGISTRER UN TICKET Z AVEC MODE DE SAISIE PAR PIECES</span>
+                    <i class="fa fa-angle-right"></i>
+                    </a>
+                <a href="#" data-menu="30">
+                      <i class="fab fa-youtube color-highlight"></i>
+                      <span>30 : SAISIE DES ACHATS FACTURE AVEC ESCOMPTE</span>
+                      <i class="fa fa-angle-right"></i>
+                      </a>
 
 
 </div>
@@ -104,7 +102,6 @@
   </li>
   </ul>
   </nav>
-
 <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
